# basic-dll-Injection

./: Cargo.toml  README.md
DLLGenerator/: Cargo.toml
DLLGenerator/src/: lib.rs
DLLInjector/: Cargo.toml
DLLInjector/src/: main.rs
